--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
-			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
-            "outDir": "${workspaceRoot}/out",
-            "sourceMaps": true,
-			"stopOnEntry": true
+			"args": ["--extensionDevelopmentPath=${workspaceRoot}/release" ],
+			"stopOnEntry": false,
+			"sourceMaps": true,
+			"outDir": "${workspaceRoot}/release"
 		}
 	]
 }
