--- a/release/package.json
+++ b/release/package.json
@@ -2,7 +2,7 @@
 	"name": "Ionide-Paket",
 	"version": "1.1.1",
 	"publisher": "Ionide",
-	"description": "Paket (alternative Nuget client) Support",
+	"description": "Paket (alternative NuGet client) Support",
 	"categories":[
 		 "Other"
 	],
