Add support for 'Why' command (#45)

--- a/release/package.json
+++ b/release/package.json
@@ -74,6 +74,9 @@
 			"command": "paket.Add",
 			"title": "Paket: Add NuGet Package"
 		},{
+			"command": "paket.Why",
+			"title": "Paket: Why is a packge included"
+		},{
 			"command": "paket.AddToCurrent",
 			"title": "Paket: Add NuGet Package (to current project)"
 		},{
@@ -136,6 +139,7 @@
 		"onCommand:paket.ConvertFromNuget",
 		"onCommand:paket.Simplify",
 		"onCommand:paket.Add",
+		"onCommand:paket.Why",
 		"onCommand:paket.AddToCurrent",
 		"onCommand:paket.UpdateGroup",
 		"onCommand:paket.UpdatePackage",
