Updated obsolete Paket API use (#46)
* Updated obsolete Paket API use

generate-include-scripts is obsolete, replaced by generate-load-scripts

https://fsprojects.github.io/Paket/paket-generate-include-scripts.html
https://fsprojects.github.io/Paket/paket-generate-load-scripts.html

Didn't try to build and test, sorry.

* Renamed GenerateIncludeScripts into GenerateLoadScripts in package.json

* Fix typo

--- a/release/package.json
+++ b/release/package.json
@@ -75,7 +75,7 @@
 			"title": "Paket: Add NuGet Package"
 		},{
 			"command": "paket.Why",
-			"title": "Paket: Why is a packge included"
+			"title": "Paket: Why is a package included"
 		},{
 			"command": "paket.AddToCurrent",
 			"title": "Paket: Add NuGet Package (to current project)"
@@ -96,8 +96,8 @@
 			"title": "Paket: Remove NuGet Package (from current project)"
 		},
 		{
-			"command": "paket.GenerateIncludeScripts",
-			"title": "Paket: Generate Include Scripts"
+			"command": "paket.GenerateLoadScripts",
+			"title": "Paket: Generate Load Scripts"
 		},
 		{
 			"command": "paket.UpdatePaketToPrerelease",
@@ -147,7 +147,7 @@
 		"onCommand:paket.RemovePackage",
 		"onCommand:paket.RemovePackageCurrent",
 		"onCommand:paket.UpdatePaketToPrerelease",
-		"onCommand:paket.GenerateIncludeScripts"
+		"onCommand:paket.GenerateLoadScripts"
 	],
 	"dependencies": {
 	}
